--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "nextjs",
-  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "type-check": "tsc"
   },
   "dependencies": {
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "ethers": "^5.4.6",
+    "lodash": "^4.17.21",
+    "loot-rarity": "^4.1.0",
+    "next": "latest",
+    "p-map": "^5.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "@types/node": "^12.12.21",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "autoprefixer": "^10.3.3",
+    "postcss": "^8.3.6",
+    "prettier": "^2.3.2",
+    "tailwindcss": "^2.2.8",
+    "typescript": "^4.4.2"
   }
 }
